fixtures/failing/checkov.sarif
{
  "$schema": "https://raw.githubusercontent.com/oasis-tcs/sarif-spec/main/sarif-2.1/schema/sarif-schema-2.1.0.json",
  "version": "2.1.0",
  "runs": [
    {
      "tool": {
        "driver": {
          "name": "checkov",
          "informationUri": "https://www.checkov.io",
          "rules": []
        }
      },
      "results": [
        {
          "ruleId": "CKV_GCP_29",
          "level": "error",
          "message": {
            "text": "Ensure that Cloud Storage bucket has uniform bucket-level access enabled (public bucket misconfiguration)."
          },
          "locations": [
            {"physicalLocation": {"artifactLocation": {"uri": "infra/main.tf"}}}
          ]
        },
        {
          "ruleId": "CKV_GCP_102",
          "level": "error",
          "message": {
            "text": "Ensure firewall rule does not allow ingress from 0.0.0.0/0 to a wide port range."
          },
          "locations": [
            {"physicalLocation": {"artifactLocation": {"uri": "infra/main.tf"}}}
          ]
        }
      ]
    }
  ]
}
